canvis amb media query

--- a/tema_1/nivell_1/index.html
+++ b/tema_1/nivell_1/index.html
@@ -13,50 +13,38 @@
         <p class="fondo1">Lorem 1</p>
       </div>
       <div class="c2">
-        <p class="fondo1">
-          Lorem 2
-        </p>
+        <p class="fondo1">Lorem 2</p>
       </div>
       <div class="c3">
-        <p class="fondo1">
-          Lorem 3
-        </p>
+        <p class="fondo1">Lorem 3</p>
       </div>
     </div>
 
     <div class="container">
       <div class="c12">
-        <p class="fondo2">
-          Lorem 4
-        </p>
+        <p class="fondo2">Lorem 4</p>
       </div>
     </div>
 
-
-<div class="container2">
-    <div class="c4">
+    <div class="container2">
+      <div class="c4">
         <div class="c6">
-        <p class="p4">Lorem 5</p>
-        <p class="p4">Lorem 6</p>
-
+          <p class="p4">Lorem 5</p>
+          <p class="p4">Lorem 6</p>
         </div>
         <div class="c7">
-            <p class="p4">Lorem 7</p>
-            <p class="p4">Lorem 8</p>
+          <p class="p4">Lorem 7</p>
+          <p class="p4">Lorem 8</p>
         </div>
-        <div> 
-            <p class="fondo2">Test </p>
+        <div>
+          <p class="fondo2">Test</p>
         </div>
-
-    </div>
-    <div class="c5">
+      </div>
+      <div class="c5">
         <p class="p1">Lorem 9</p>
         <p class="p1">Lorem 10</p>
-</div>
-</div>
-
-
-
+      </div>
+    </div>
 
     <div class="container3">
       <div class="c12">
